SERVER-43836 use unique_ptr for activeHistoryLine to fix resource leak